--- a/styles.css
+++ b/styles.css
@@ -7,10 +7,6 @@ hm{
   font-size: 50px;
   font-family: "Ubuntu", sans-serif;
   color: white;
-  background-color: red;
-  display: block;
-  text-align: center;
-  margin-bottom: 25px;
 }
 
 h{
@@ -24,6 +20,15 @@ hs{
   font-size: 25px;
   color: black;
   display: block;
+}
+
+.titlebar{
+	width: 100%;
+	height: 80px;
+	background-color: rgba(235, 15, 15, 1);
+	text-align: center;
+	padding-top: 20px;
+	margin-bottom: 20px;
 }
 
 .section-header{
