Change border to black

--- a/styles.css
+++ b/styles.css
@@ -48,7 +48,7 @@ hs{
 	width: 300px;
 	min-width: 300px;
 	height: 300px;
-	border: 2px solid red;
+	border: 2px solid black;
 	overflow: hidden;
 	border-radius: 20px;
 	margin: 25px auto;
