--- a/styles.css
+++ b/styles.css
@@ -85,3 +85,64 @@ hs{
 	width: 100%;
 	height: 85%;
 }
+
+h2{
+  font-size: 20px;
+  font-family: "Roboto", sans-serif;
+  color: black;
+  display: block;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+m{
+  font-size: 20px;
+  display: block;
+  text-align: center;
+}
+
+m2{
+  font-size: 18px;
+  display: block;
+  text-align: center;
+}
+
+table{
+  text-align: center;
+  border: 2px solid darkorange;
+  border-collapse: collapse;
+  margin-left:auto; 
+  margin-right:auto;
+}
+
+tr{
+  border: 2px solid darkorange;
+}
+
+td{
+  border: 2px solid darkorange;
+  height: 20px;
+  vertical-align: middle;
+  width: 150px;
+}
+
+.td1{
+  border: 2px solid darkorange;
+  height: 20px;
+  vertical-align: middle;
+  width: 50px;
+}
+
+.td2{
+  border: 2px solid darkorange;
+  height: 20px;
+  vertical-align: middle;
+  width: 50px;
+}
+
+th {
+  background-color: red;
+  border: 2px solid darkorange;
+  border-collapse: collapse;
+  vertical-align: bottom;
+}
